--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" type="text/css" href="public/css/cssLayout.css">
-	<link rel="stylesheet" type="text/css" href="public/css/navegador.css">
+	<link rel="stylesheet" type="text/css" href="css/cssLayout.css">
+	<link rel="stylesheet" type="text/css" href="css/navegador.css">
 </head>
 <body>
 	<div id="contenedor">
