Inicio de pagina

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Bien  Venidos a Yaca Aventura</title>
 	<link rel="stylesheet" type="text/css" href="css/cssLayout.css">
 	<link rel="stylesheet" type="text/css" href="css/navegador.css">
 </head>
@@ -28,39 +28,24 @@
 					</ul>
 				</nav>
 			</div>
-			<div id="Banner">
-				<h1>Bienvenidos a nuestra Pagina</h1>
-			</div>
+			
 		</header>
 		<div>
-			<section>
-				<div  id="contenido">
-					<h2>hola</h2>
-					<p>hola</p><br>
-					<p>hola</p><br>
-					<p>hola</p><br>	
-					<p>hola</p><br>
-					<p>hola</p><br>
-					<p>hola</p><br>	
-				</div>
-			</section>
-					<aside>
-					articulo
-					</aside>
-		</div>
-        <p>hola</p><br>
-		<p>hola</p><br>	
-		<p>hola</p><br>
-
-
-
-		<footer>
+			<section >
+						<img id="yaca" src="img/yaca2.jpg">
+			
 		
-			<div id="pie">
-					<P style="margin: 0px;" >Diana Moraya Guzman</P>
-			</div>
-		</footer>
+			</section>
+		</div>
+		
 	</div>
 
+	<footer>
+		<div id="pie">
+		<p> Diana Moraya Guzman </p>
+			
+		</div>
+		
+		</footer>
 </body>
 </html>
